--- a/src/makefile
+++ b/src/makefile
@@ -4,20 +4,22 @@ CC = gcc
 CFLAG = -std=c99 -ggdb -Wall
 MYSQL_LINK = `mysql_config --libs`
 MYSQL_COMP = `mysql_config --cflags`
+CURL_LINK = `curl-config --libs`
+CURL_COMP = `curl-config --cflags`
 
 all: firebot 
 
 firebot: config.o firebot.o log.o
-	$(CC) $(CFLAG) -o firebot config.o firebot.o log.o $(MYSQL_LINK)
+	$(CC) $(CFLAG) -o firebot config.o firebot.o log.o $(MYSQL_LINK) $(CURL_LINK)
 
 config.o: config.c include/firebot.h include/config.h
-	$(CC) $(CFLAG) -c $(MYSQL_COMP) config.c 
+	$(CC) $(CFLAG) -c $(MYSQL_COMP) $(CURL_COMP) config.c 
 
 firebot.o: firebot.c include/firebot.h include/config.h
-	$(CC) $(CFLAG) -c $(MYSQL_COMP) firebot.c
+	$(CC) $(CFLAG) -c $(MYSQL_COMP) $(CURL_COMP) firebot.c
 
 log.o: log.c include/firebot.h include/log.h
-	$(CC) $(CFLAG) -c $(MYSQL_COMP) log.c
+	$(CC) $(CFLAG) -c $(MYSQL_COMP) $(CURL_COMP) log.c
 
 clean:
 	$(RM) *.o firebot 
