Update config file.

--- a/support-files/example.conf
+++ b/support-files/example.conf
@@ -20,3 +20,8 @@ MYSQL_DATABASE=firebot
 # - The max number of fetching threads.
 # -----------------------------------------------
 MAX_THREADS=20
+
+# -----------------------------------------------
+# - The path to your specfic log file.
+# -----------------------------------------------
+#LOG_FILE_PATH=/var/log/firebot.log
