--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y libmysqlclient-dev
-  - sudo apt-get install -y libcurl-dev
+  - sudo apt-get install -y libcurl4-openssl-dev
   - sudo apt-get install -y libssl-dev
 
 install:
