--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - sudo make
           
 before_script:
-  - mysql -e "CREATE DATEABASE IF NOT EXISTS firebot;"
+  - mysql -e "CREATE DATABASE IF NOT EXISTS firebot;"
   - mysql -e "USE firebot; SOURCE ./extras/firebot.sql" -uroot
 
 script:
