--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
 before_script:
   - mysql -e "CREATE DATABASE IF NOT EXISTS firebot;"
   - mysql -uroot firebot < extras/firebot.sql
+  - sudo cp conf/sample.conf /etc/firebot.conf
 
 script:
   - ./build/firebot
