Update username and password for travis.

--- a/conf/sample.conf
+++ b/conf/sample.conf
@@ -12,8 +12,8 @@
 # -----------------------------------------------
 MYSQL_ADDR=127.0.0.1
 MYSQL_PORT=3306
-MYSQL_USER=firebot
-MYSQL_PASSWORD=firebot
+MYSQL_USER=root
+MYSQL_PASSWORD=
 MYSQL_DATABASE=firebot
 
 # -----------------------------------------------
